implemented hive driver test